k8s/llm-d/llm-d/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    monitoring: "true"
  name: demo-llm
